--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "underscore": "*"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-less": "~0.5.2",
-    "grunt-contrib-htmlmin": "~0.1.3"
+    "grunt-contrib-uglify": "~0.2.4"
   },
   "optionalDependencies": {},
   "engines": {
